fixed a margin issue on the sign in page on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,6 +135,12 @@ header.masthead {
     margin-bottom: 10%;
 }
 
+@media screen and (max-width:1000px){
+    .content{
+        margin-bottom: 25%;
+    }
+}
+
 /*-------------- Nav Bar ------------------- */
 
 
